--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,1 +1,14 @@
 <h1>タスク一覧</h1>
+
+<table>
+  <tr>
+    <th>タスク名</th>
+    <th>内容</th>
+  </tr>
+  <% @tasks.each do |task| %>
+  <tr>
+    <td> <%= task.task_name %> </td>
+    <td> <%= task.content %> </td>
+  </tr>
+  <% end %>
+</table>
