--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
+  <header>
+    <h1>Everyleaf</h1>
+  </header>
+  <nav>
+    <%= link_to 'タスク一覧', tasks_path %>
+    <%= link_to 'タスク新規登録', new_task_path %>
+  </nav>
     <%= yield %>
   </body>
 </html>
