--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -9,6 +9,7 @@
   <tr>
     <td> <%= task.task_name %> </td>
     <td> <%= task.content %> </td>
+    <td> <%= link_to "詳細", task_path(task.id) %> </td>
   </tr>
   <% end %>
 </table>
