--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,12 @@
     <%= link_to 'タスク一覧', tasks_path %>
     <%= link_to 'タスク新規登録', new_task_path %>
   </nav>
+  <% if flash %>
+    <% flash.each do |key, value| %>
+      <%= content_tag(:p, value, class: key) %>
+    <% end %>
+  <% end %>
+  
     <%= yield %>
   </body>
 </html>
