--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,9 +1,20 @@
 <h1>タスクの新規登録</h1>
-<%= form_with( model: @task, local: true ) do |f| %>
-<%= f.label :task_name, "タスク名" %> <br>
-<%= f.text_field :task_name %> <br>
-<%= f.label :content, "内容" %> <br>
-<%= f.text_area :content %> <br>
-<%= f.submit "登録する" %>
+<% if @task.errors.any? %>
+  <div id = "error_explanation">
+    <h5><%= pluralize(@task.errors.count,"error") %> prohibited this <%= @task %> from being saved:</h2>
+    <ul>
+    <% @task.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
 
+<%= form_with( model: @task, local: true ) do |f| %>
+  
+  <%= f.label :task_name, "タスク名" %> <br>
+  <%= f.text_field :task_name %> <br>
+  <%= f.label :content, "内容" %> <br>
+  <%= f.text_area :content %> <br>
+  <%= f.submit "登録する" %>
 <% end %>
