--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,11 +1,10 @@
 <h1>タスクの編集</h1>
+
 <%= form_with( model: @task, local: true ) do |f| %>
-<%= f.hidden_field :task_name %>
-<%= f.hidden_field :content %>
 <%= f.label :task_name, "タスク名" %> <br>
 <%= f.text_field :task_name %> <br>
 <%= f.label :content, "内容" %> <br>
 <%= f.text_area :content %> <br>
-<%= f.submit "登録する" %>
+<%= f.submit "編集する" %>
 
 <% end %>
