--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,4 +1,14 @@
 <h1>タスクの編集</h1>
+<% if @task.errors.any? %>
+  <div id = "error_explanation">
+    <h5><%= pluralize(@task.errors.count,"error") %> prohibited this <%= @task %> from being saved:</h2>
+    <ul>
+    <% @task.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
 
 <%= form_with( model: @task, local: true ) do |f| %>
 <%= f.label :task_name, "タスク名" %> <br>
