--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -11,10 +11,12 @@
 <% end %>
 
 <%= form_with( model: @task, local: true ) do |f| %>
-<%= f.label :task_name, "タスク名" %> <br>
-<%= f.text_field :task_name %> <br>
-<%= f.label :content, "内容" %> <br>
-<%= f.text_area :content %> <br>
-<%= f.submit "編集する" %>
+  <%= f.label :task_name, "タスク名" %> <br>
+  <%= f.text_field :task_name %> <br>
+  <%= f.label :content, "内容" %> <br>
+  <%= f.text_area :content %> <br>
+  <%= f.label :deadline, "期限" %> <br>
+  <%= f.datetime_select :deadline %> <br>
+  <%= f.submit "編集する" %>
 
 <% end %>
