--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,13 +4,15 @@
   <tr>
     <th>タスク名</th>
     <th>内容</th>
+    <th>期限</th>
     <th>投稿日時</th>
   </tr>
   <% @tasks.each do |task| %>
   <tr>
     <td> <%= task.task_name %> </td>
     <td> <%= task.content %> </td>
-    <td> <%= task.created_at.year %>年<%= task.created_at.month %>月<%= task.created_at.day %>日　<%= task.created_at.hour %>:<%= task.created_at.min %> </td>
+    <td> <%= format("%04d年%02d月%02d日 %02d:%02d", task.deadline.year, task.deadline.month, task.deadline.day, task.deadline.hour, task.deadline.min) %> </td>
+    <td> <%= format("%04d年%02d月%02d日 %02d:%02d", task.created_at.year, task.created_at.month, task.created_at.day, task.created_at.hour, task.created_at.min) %> </td>
     <td> <%= link_to "詳細", task_path(task.id) %> </td>
     <td> <%= link_to "編集", edit_task_path(task.id) %> </td>
     <td> <%= link_to "削除", task_path(task.id), method: :delete, data: {confirm: "削除しますか？"} %> </td>
