--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -16,5 +16,7 @@
   <%= f.text_field :task_name %> <br>
   <%= f.label :content, "内容" %> <br>
   <%= f.text_area :content %> <br>
+  <%= f.label :deadline, "期限" %> <br>
+  <%= f.datetime_select :deadline %> <br>
   <%= f.submit "登録する" %>
 <% end %>
