--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -15,6 +15,8 @@
   <%= f.text_field :task_name %> <br>
   <%= f.label :content, "内容" %> <br>
   <%= f.text_area :content %> <br>
+  <%= f.label :status, "ステータス" %> <br>
+  <%= f.select :status, ["未着手", "着手中", "完了"] %> <br>
   <%= f.label :deadline, "期限" %> <br>
   <%= f.datetime_select :deadline %> <br>
   <%= f.submit "編集する" %>
