--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -19,6 +19,7 @@
     <th>タスク名</th>
     <th>内容</th>
     <th>ステータス</th>
+    <th>優先度</th>
     <th>期限</th>
     <th>投稿日時</th>
   </tr>
@@ -27,6 +28,7 @@
     <td> <%= task.task_name %> </td>
     <td> <%= task.content %> </td>
     <td> <%= task.status %> </td>
+    <td> <%= task.priority %> </td>
     <td> <%= format("%04d年%02d月%02d日 %02d:%02d", task.deadline.year, task.deadline.month, task.deadline.day, task.deadline.hour, task.deadline.min) %> </td>
     <td> <%= format("%04d年%02d月%02d日 %02d:%02d", task.created_at.year, task.created_at.month, task.created_at.day, task.created_at.hour, task.created_at.min) %> </td>
     <td> <%= link_to "詳細", task_path(task.id) %> </td>
