--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -18,6 +18,8 @@
   <%= f.text_area :content %> <br>
   <%= f.label :status, "ステータス" %> <br>
   <%= f.select :status, ["未着手", "着手中", "完了"] %> <br>
+  <%= f.label :priority, "優先度" %> <br>
+  <%= f.select :priority, ["低", "中", "高"] %> <br>
   <%= f.label :deadline, "期限" %> <br>
   <%= f.datetime_select :deadline %> <br>
   <%= f.submit "登録する" %>
