--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,49 @@
 // Place all the styles related to the tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+body{
+  align-items: center;
+}
+
+header {
+  width: 100%;
+  background-color: #2c3e50;
+  height: 54px;
+  margin: 0
+}
+header h1{
+  color: azure;
+  text-align: center;
+}
+#navbar {
+  width: 100%;
+  height: 28px;
+  background-color: darkgrey;
+}
+#navbar a{
+  float: right;
+  padding-right: 15px;
+}
+
+#content_wrapper{
+  width: 1080px;
+  display: block;
+}
+
+input{
+  border-radius: 10px;
+  border: solid black 1px;
+  padding: 5px;
+}
+
+th{
+  border-bottom: solid powderblue 1px;
+}
+
+td a{
+  border: solid blue 1px;
+  border-radius: 5px;
+  background-color: lightblue;
+  padding: 3px;
+}
