--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -9,6 +9,14 @@
     <td> <%= @task.content %> </td>
   </tr>
   <tr>
+    <th>ステータス</th>
+    <td> <%= @task.status %> </td>
+  </tr>
+  <tr>
+    <th>優先度</th>
+    <td> <%= @task.priority %> </td>
+  </tr>
+  <tr>
     <th>期限</th>
     <td> <%= format("%04d年%02d月%02d日 %02d:%02d", @task.deadline.year, @task.deadline.month, @task.deadline.day, @task.deadline.hour, @task.deadline.min) %> </td>
   </tr>
