--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,8 +2,9 @@
 <%= form_with(scope: :select, url: tasks_path, local: true, method: :get) do |d| %>
   <%= d.label :search, "タスク名 検索：" %>
   <%= d.text_field :search %> <br>
-  <%= d.label :status, "ステータス絞り込み:   " %>
-  <%= d.check_box :status_not, {checked: true} %>
+  <%= d.label :status, "ステータス:" %>
+  <%= d.select :status, ["未着手", "着手中", "完了"], include_blank: "選択してください" %>
+  <!-- <%= d.check_box :status_not, {checked: true} %>
   <%= d.label :status_not, "未着手" %>
   <%= d.check_box :status_working, {checked: true} %>
   <%= d.label :status_working, "着手中" %>
@@ -11,9 +12,11 @@
   <%= d.label :status_fin, "完了" %> <br>
   <%= d.label :sort_index, "表示順：" %>
   <%= d.select :sort_index,[["タスク名", :task_name],["内容", :content],["ステータス", :status],["優先度", :priority],["期限", :deadline],["投稿日", :created_at]], include_blank: "選択してください" %>
-  <%= d.select :direction,[["昇順", :asc],["降順", :desc]] %> <br>
+  <%= d.select :direction,[["昇順", :asc],["降順", :desc]] %> <br> -->
   <%= d.submit "表示する" %> <br>
 <% end %>
+<%= link_to "終了期限でソートする",tasks_path(sort_expired: "true")  %>
+<%= link_to "優先順位でソートする",tasks_path(sort_priority: "true") %>
 <table>
   <tr>
     <th>タスク名</th>
