--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,13 @@
     <h1>Everyleaf</h1>
   </header>
   <div id="navbar" >
-    <%= link_to 'タスク一覧', tasks_path %>
-    <%= link_to 'タスク新規登録', new_task_path %>
+    <div id = "nav_task">
+      <%= link_to 'タスク一覧', tasks_path %>
+      <%= link_to 'タスク新規登録', new_task_path %>
+    </div>
+    <div id="nav_user">
+      <%= link_to('ユーザー登録', new_user_path ) %>
+    </div>
   </div>
   <% if flash %>
     <% flash.each do |key, value| %>
