--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,21 @@
     <h1>Everyleaf</h1>
   </header>
   <div id="navbar" >
-    <div id = "nav_task">
-      <%= link_to 'タスク一覧', tasks_path %>
-      <%= link_to 'タスク新規登録', new_task_path %>
-    </div>
-    <div id="nav_user">
-      <%= link_to('ユーザー登録', new_user_path ) %>
-    </div>
+    <% if logged_in? %>
+      <div id = "nav_task">
+        <%= link_to('タスク一覧', tasks_path) %>
+        <%= link_to('タスク新規登録', new_task_path) %>
+        <%= link_to('ユーザー情報', user_path(current_user.id)) %>
+      </div>
+      <div id="nav_user">
+          <%= link_to('ログアウト', session_path(current_user.id), method: :delete) %>
+      </div>
+    <% else %>
+      <div id="nav_user">
+          <%= link_to('ログイン', new_session_path ) %>
+          <%= link_to('ユーザー登録', new_user_path ) %>
+      </div>
+    <% end %>
   </div>
   <% if flash %>
     <% flash.each do |key, value| %>
