--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,12 @@
     <h1>Everyleaf</h1>
   </header>
   <div id="navbar" >
+    <% if true %>
+      <div id = "nav_admin">
+        <%= link_to('ユーザー 一覧', admin_users_path) %>
+        <%= link_to('ユーザー 作成', new_admin_user_path) %>
+      </div>
+    <% end %>
     <% if logged_in? %>
       <div id = "nav_task">
         <%= link_to('タスク一覧', tasks_path) %>
