--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -30,7 +30,8 @@
     <td><%= f.password_field :password_confirmation %></td>
   </tr>
   <tr>
-    <th>管理者</th>
+    <th><%= f.label :admin, "管理者権限" %></th>
+    <td><%= f.select :admin, [["一般ユーザー", false],["管理者", true]] %></td>
   </tr>
   </table>
   <%= f.submit "登録する" %>
