--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <h1>Everyleaf</h1>
   </header>
   <div id="navbar" >
-    <% if true %>
+    <% if current_user_admin? %>
       <div id = "nav_admin">
         <%= link_to('ユーザー 一覧', admin_users_path) %>
         <%= link_to('ユーザー 作成', new_admin_user_path) %>
