--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<h1>タスク一覧</h1>
+<h1><%= "#{current_user.name}さんのタスク一覧" %></h1>
 <%= form_with(scope: :select, url: tasks_path, local: true, method: :get) do |d| %>
   <%= d.label :search, "タスク名 検索：" %>
   <%= d.text_field :search %> <br>
