--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>管理者メニュー ユーザー編集</h1>
+<h1>【管理者メニュー】 ユーザー編集</h1>
 <% if @user.errors.any? %>
   <div>
     <ul>
@@ -10,7 +10,7 @@
 <% end %>
 
 
-<%= form_with(model: @user, local: true) do |f| %>
+<%= form_with(model: @user, local: true, url: admin_user_path) do |f| %>
   <table>
     <tr>
     <th><%= f.label :name, "ユーザー名" %></th>
@@ -29,8 +29,9 @@
     <td><%= f.password_field :password_confirmation %></td>
   </tr>
   <tr>
-    <th>管理者</th>
+    <th><%= f.label :admin, "管理者権限" %></th>
+    <td><%= f.select :admin, [["一般ユーザー", false],["管理者", true]] %></td>
   </tr>
   </table>
-  <%= f.submit "登録する" %>
+  <%= f.submit "更新する" %>
 <% end %>
