--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -9,6 +9,10 @@
     <td> <%= @task.content %> </td>
   </tr>
   <tr>
+    <th>ユーザー名</th>
+    <td> <%= @user.name %> </td>
+  </tr>
+  <tr>
     <th>ステータス</th>
     <td> <%= @task.status %> </td>
   </tr>
