ラベル機能を実装、（新規作成、編集、表示）

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
         <%= link_to('タスク一覧', tasks_path) %>
         <%= link_to('タスク新規登録', new_task_path) %>
         <%= link_to('ユーザー情報', user_path(current_user.id)) %>
+        <%= link_to('ラベル一覧', admin_labels_path) %>
       </div>
       <div id="nav_user">
           <%= link_to('ログアウト', session_path(current_user.id), method: :delete) %>
