--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -22,5 +22,7 @@
   <%= f.select :priority, ["低", "中", "高"] %> <br>
   <%= f.label :deadline, "期限" %> <br>
   <%= f.datetime_select :deadline %> <br>
+  <%= f.label :labels, "ラベル"%>
+  <%= f.collection_check_boxes :label_ids, Label.all, :id, :label_name %>
   <%= f.submit "登録する" %>
 <% end %>
