--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -28,4 +28,13 @@
     <th>投稿日時</th>
     <td> <%= format("%04d年%02d月%02d日 %02d:%02d", @task.created_at.year, @task.created_at.month, @task.created_at.day, @task.created_at.hour, @task.created_at.min) %> </td>
   </tr>
+  <tr>
+    <th>ラベル</th>
+    <td>
+      <% @task.labels.each do |label| %>
+        <p><%= label.label_name %></p>
+      <% end %>
+    
+    </td>
+  </tr>
 </table>
